# opencv_demo

one_demo/: CMakeLists.txt  README.md  main.cpp
